Create Info section - html + css.

--- a/index.html
+++ b/index.html
@@ -51,5 +51,53 @@
 
     <!-- End of hero section -->
 
+    <!-- Info section -->
+  <div class="info-container">
+    <div class="site-container">
+      <div class="info-item">
+        <div class="icon one">
+            <img src="./resources/pictures/paper-icon.png" alt="paper-icon">
+        </div>
+        <div class="text">
+          <span>Comprehensive Exams</span>
+        </div>
+        </div>
+        <div class="info-item">
+          <div class="icon">
+            <img src="./resources/pictures/ruler-icon.png" alt="ruler-icon">
+          </div>
+          <div class="text">
+            <span>Custom Fittings</span>
+          </div>
+        </div>
+        <div class="info-item">
+          <div class="icon">
+            <img src="./resources/pictures/truck-icon.png" alt="truck-icon">
+          </div>
+          <div class="text">
+            <span>Fast Delivery</span>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
   </body>
 </html>
