--- a/index.html
+++ b/index.html
@@ -82,6 +82,36 @@
 
 
     </div>
+    <!-- End of Info section -->
+
+    <!-- About us / Contact section -->
+    <div class="about-us-container">
+      <div class="site-container">
+        <div class="about-us-item">
+          <div class="title">
+            <span>PHILOSOPHY</span>
+          </div>
+          <div class="text">
+            <span>Over 75% of our brains are dedicated to
+            one sense: vision. We believe everyone deserves
+            to see the world, not matter what. That's why we
+            offer eye exams, customer fittings, and quick delivery
+            at a low cost. It's your vision that makes ours.</span>
+          </div>
+        </div>
+        <div class="about-us-item">
+          <div class="title">
+            <span>APPOINTMENTS</span>
+          </div>
+          <div class="text">
+            <span>Schedule an appointment by calling us at
+            (312) 654-0987. We're open Tuesday - Saturday, 9AM -6PM.</span>
+          </div>
+
+        </div>
+      </div>
+    </div>
+
   </div>
 
 
