Create footer section: desktop version completed.

--- a/index.html
+++ b/index.html
@@ -113,8 +113,22 @@
     </div>
 
   </div>
+  <!-- End of about-us-container section -->
 
+  <!-- Footer section -->
 
+  <div class="footer-container">
+    <div class="site-container">
+      <div class="logo-and-company-container">
+        <div class="logo">
+          <img src="./resources/pictures/logo-black.png" alt="Tortoiseshell-Optics-logo">
+        </div>
+        <div class="company-name">
+          <span>&copy; Tortoiseshell Optics</span>
+        </div>
+      </div>
+    </div>
+  </div>
 
 
 
