--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <div class="nav-item">
               <span>Contact</span>
             </div>
+            <div class="mobile">
+              <span>Menu</span>
+            </div>
           </div>
         </div>
   </div>
